@@ -21,6 +21,8 @@ Unreleased
 
 - webhelpers2.misc
 
+  * [feature] Reinstate formatted exceptions with ``StudlyException``
+    class. (Replaces 'DeclarativeException' which was deleted in 2.0b1.)
   * [bug] format_exception() did not work if called with ``exc=None`` (due
     to missing ``import sys``.)
 
